Buttons fixed spacing added to sections, responsive checks

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
-
-/*  Font import so don't have to load in each head */ 
+/*  Font import so don't have to load in each head */
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Lato:100,200,300,400,500,600,700');
 
 
-/* text fixes */ 
-h1, h2, h3 {
+/* text fixes */
+h1,
+h2,
+h3 {
     text-transform: uppercase;
     font-weight: bold;
     margin-top: 1rem;
@@ -16,8 +17,8 @@ h4 {
     font-weight: 300;
 }
 
-.uppercase{
-    text-transform: uppercase; 
+.uppercase {
+    text-transform: uppercase;
 }
 
 body {
@@ -37,52 +38,64 @@ body {
 }
 
 a {
-    color: #5f4100 ;}
+    color: #5f4100;
+}
 
 a:hover {
     color: #fad50f;
     font-weight: bold;
-    text-decoration: none;}
+    text-decoration: none;
+}
 
 .spotlight {
     color: #ffc107;
 }
 
-/* Button tweaks */ 
+.splash-btn {
+
+    width: fit-content;
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Button tweaks */
 .btn-lg {
-    padding: 2.5rem 1rem;
     line-height: inherit;
     text-transform: uppercase;
     border-radius: .3rem;
     letter-spacing: 0.1em;
-    font-family: "Roboto", sans-serif;
-    font-size: 18px !important;
+    font-family: "Lato", sans-serif;
+    font-size: 1em !important;
     border-width: 2px !important;
-    margin-bottom: 8px;
 }
+
 /* ------------------------------------------------- Heading */
 
-/* Navbar */ 
+/* Navbar */
 
 .menu-wrapper .row-menu .row-menu-inner {
     padding: 0px 36px 0px 36px;
-} 
+}
 
 .nav-logo-full {
     display: block;
     max-width: 80%;
     height: auto;
-  }
+}
 
-.nav-logo-mobile{
-    display:none;
-   }
+.nav-logo-mobile {
+    display: none;
+}
 
-@media screen and (max-width: 576px){
+@media screen and (max-width: 576px) {
     .nav-logo-full {
         display: none;
     }
-    .nav-logo-mobile{
+
+    .nav-logo-mobile {
         display: block;
         max-width: 54%;
         height: auto;
@@ -90,15 +103,15 @@ a:hover {
 
 }
 
-  /* hero banner */
+/* hero banner */
 
-  .hero-image {
-      max-width: 100%;
-      height: auto;
-      padding: 80px 0px 0px;
- }
+.hero-image {
+    max-width: 100%;
+    height: auto;
+    padding: 80px 0px 0px;
+}
 
-  .header-bg-wrapper .header-bg {
+.header-bg-wrapper .header-bg {
     position: absolute;
     right: 0;
     left: 0;
@@ -108,6 +121,7 @@ a:hover {
     background-position: center center;
     background-size: cover;
 }
+
 /* MOVE 
 .img-fluid-height {
     max-height: 100%;
@@ -134,10 +148,10 @@ a:hover {
 
 @media (max-width: 991.98px) {
     .bullet-list ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 
@@ -153,11 +167,15 @@ a:hover {
     margin-top: 5px;
 }
 
+/*-------------------------------------------- Heaader padding */
 
+/*#quotes-head {
+    padding-bottom: 0px;
+}
 
 /*-------------------------------------------- Footer */
 
-footer{
+footer {
     background-color: #343a3f;
     color: #fafafa;
     min-height: 120px;
